style: fix poor visibility of some text
I searched for (almost) all explicitly defined colors
and fixed the most obvious.

--- a/packages/frontend/scss/message/_message-detail.scss
+++ b/packages/frontend/scss/message/_message-detail.scss
@@ -15,5 +15,5 @@
 }
 
 .module-message-detail__unix-timestamp {
-  color: #eeefef;
+  opacity: 0.6;
 }
